--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nuxt": "^3.9.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.1.0"
   }
 }
