--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@flaticon/flaticon-uicons": "^3.1.0"
+    "@flaticon/flaticon-uicons": "^3.1.0",
+    "@nuxt/image": "^1.3.0",
+    "html-to-image": "^1.11.11"
   }
 }
