--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.9.3",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   },
