--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/image": "^1.3.0",
+    "@nuxt/image-edge": "^1.3.0-28468005.8ad772e",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.2",
     "daisyui": "^4.6.1",
