--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Static HTML export with Nuxt
-        run: ${{ steps.detect-package-manager.outputs.manager }} build --preset github_pages
+        run: ${{ steps.detect-package-manager.outputs.manager }} run build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
