--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.1.0",
+    "@vercel/analytics": "^1.2.1",
     "html-to-image": "^1.11.11"
   }
 }
